# Transformed-image

solution/: CMakeLists.txt
solution/include/: bmp.h  image.h  validation.h
solution/src/: bmp.c  images_manager.c  main.c  rotations.c  validation.c
